@@ -1,5 +1,5 @@
 /*
- * Copyright 1999,2004 The Apache Software Foundation.
+ * Copyright 1999,2004-2005 The Apache Software Foundation.
  * 
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -14,7 +14,6 @@
  * limitations under the License.
  */
 
-// Contributors:   Mathias Bogaert
 package org.apache.log4j.xml;
 
 import org.apache.log4j.Layout;
@@ -29,7 +28,7 @@ import java.util.Set;
 
 /**
  * The output of the XMLLayout consists of a series of log4j:event elements as
- * defined in the <a href="doc-files/log4j.dtd">log4j.dtd </a>. It does not
+ * defined in the <a href="log4j.dtd">log4j.dtd </a>. It does not
  * output a complete well-formed XML file. The output is designed to be included
  * as an <em>external entity</em> in a separate file to form a correct XML
  * file.
@@ -59,6 +58,8 @@ import java.util.Set;
  * output generated by XMLLayout. The value of this attribute should be "1.1"
  * for output generated by log4j versions prior to log4j 1.2 (final release) and
  * "1.2" for relase 1.2 and later.
+ *
+ * Contributors:   Mathias Bogaert
  * 
  * @author Ceki G&uuml;lc&uuml;
  * @since 0.9.0
